[package]
name = "gstreamer-lab"
version = "0.1.0"
authors = ["richardwesthaver <richard.westhaver@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = "0.16.3"
gstreamer-audio = "0.16.3"
gstreamer-video = "0.16.3"
gstreamer-app = "0.16.3"
gstreamer-pbutils = "0.16.3"
gstreamer-editing-services = "0.16.3"
glib = "0.10.2"
gdk = "0.13.2"
gtk = "0.9.2"
gio = "0.9.1"
byte-slice-cast = "0.3.5"
failure = "0.1.8"
# anyhow = "1.0.32"